fixing overflow and horizontal scroll

--- a/src/pages/frontPage/frontPage.css
+++ b/src/pages/frontPage/frontPage.css
@@ -4,4 +4,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  
   }
+
+  html {
+      overflow-x: hidden;
+  }
+  
